[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "BERATools"
#version = "0.9.0"
dynamic = ["version"]
description = "An advanced forest line feature analysis platform"
requires-python = ">=3.9"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    { name = "AppliedGRG", email = "appliedgrg@gmail.com" },
    { name = "Richard Zeng", email = "richardqzeng@gmail.com" },
]

keywords = [
    "BERA", "Line"
]

classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "label_centerlines",
    "laserchicken",
    "dask",
    "distributed",
    "geopandas",
    "huggingface_hub",
    "matplotlib",
    "pip",
    "pyogrio",
    "psutil",
    "pyqt",
    "ray-default",
    "rioxarray",
    "rpy2",
    "r-essentials",
    "r-lidr",
    "r-rcsf",
    "r-rlas",
    "r-sf",
    "r-sp",
    "r-terra",
    "scikit-image",
    "sphinx-tabs",
    "sphinx-rtd-theme",
    "xarray-spatial"
]

[project.scripts]
BERATools = "beratools.gui:gui_main"

[project.urls]
Homepage = "https://github.com/RichardQZeng/BTools"

[tool.hatch.version]
path = "beratools/__about__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/beratools",
]
